--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "compile": "npx hardhat compile",
     "deploy:mumbai:GratitudeNFT": "npx hardhat run --network mumbai scripts/GratitudeNFT.deploy.js",
     "verify:mumbai:GratitudeNFT": "npx hardhat verify --contract contracts/GratitudeNFT.sol:GratitudeNFT --network mumbai 0xa11A21F90AcF541f520CE35170Bd2e15bf887466",
+    "deploy:mumbai:IncenseNFT": "npx hardhat run --network mumbai scripts/IncenseNFT.deploy.js",
+    "verify:mumbai:IncenseNFT": "npx hardhat verify --contract contracts/IncenseNFT.sol:IncenseNFT --network mumbai 0x28a40545fa8Af247f13B2c3Ef1A25CA95f1b25ee",
+    "deploy:mumbai:SoulBoundToken": "npx hardhat run --network mumbai scripts/SoulBoundToken.deploy.js",
+    "verify:mumbai:SoulBoundToken": "npx hardhat verify --contract contracts/SoulBoundToken.sol:SoulBoundToken --network mumbai 0x34acf1B28Eb3ef32850f408Ab3a6b714de0fc1B7",
     "test:permit": "npx hardhat test test/erc20-permit.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
